wk_taa_taaqa/src/objects/TSM_App_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TSM App Log</label>
    <listViews>
        <fullName>TSM_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>TSM Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TSM App Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TSM App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>